--- a/style.css
+++ b/style.css
@@ -11,6 +11,10 @@
 
     }
 
+    body{
+      font-size: 1rem;
+    }
+
 
 /* This class provides the style of most of the document */
 
@@ -57,6 +61,7 @@ color: black;
    padding-top: 20px;
    text-align: center;
    font-family: "Orbitron", sans-serif;
+   padding-bottom: 30px;
 }
 
 /* This class provides the style to the search box */
@@ -73,27 +78,23 @@ color: black;
 
 
 .secondarytitles{
+overflow: auto;
 justify-content: right;
 color: var(--complementaryColor);
-font-weight: 200;
+font-size: 1.5rem;
 font-family: "Orbitron", sans-serif;
+}
+
+.secondarytitles1{
+  padding-top: 20px;
+  overflow: auto;
+  text-align: center; /* Cambiado a 'center' para centrar el texto */
+  font-size: 1.5rem;
 }
 
 /* This class provides the the style to the soccer field image  */
 
-.Button{
-display: flex;
-justify-content: center;
-padding-top: 20px;
 
-
-}
-
-.Button button{
-
-background-color: var(--complementaryColor);
-color: var(--brandDarkColor);
-}
 
 
 .field {
@@ -114,12 +115,6 @@ color: var(--brandDarkColor);
     border-radius: 50%;
     transform: translate(-50%, -50%)}
 
-    .PassionImage{
-    padding-top: 30px;
-    padding-left: 500px;
-    width: 500px;
-    height: 500px;
-    }
 
     #contact-form textarea {
         height: 200px;
@@ -228,12 +223,16 @@ opacity: 10%;
         }
         
         .btn{
+        justify-content: center;
         margin: 10px;
         padding: 5px 5px 5px 5px;
         background-color: var(--complementaryColor);
         color: var(--brandDarkColor); 
         font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
         }
+
+
+  
         
         
         
