--- a/style.css
+++ b/style.css
@@ -85,11 +85,11 @@ font-size: 1.5rem;
 font-family: "Orbitron", sans-serif;
 }
 
-.secondarytitles1{
+.invitation{
   padding-top: 20px;
   overflow: auto;
-  text-align: center; /* Cambiado a 'center' para centrar el texto */
-  font-size: 1.5rem;
+  text-align: left; 
+  font-size: 3rem;
 }
 
 /* This class provides the the style to the soccer field image  */
@@ -143,6 +143,7 @@ opacity: 10%;
     display: flex;
     flex-direction: row;
     justify-content:space-between;
+    text-align: center;
     margin: auto;
     overflow: auto;
     padding-left: 1rem;
